fix: portlet local users on mobile

--- a/collective/rcse/resources/dev/less/mobile.less
+++ b/collective/rcse/resources/dev/less/mobile.less
@@ -430,3 +430,14 @@ form:after{
 .formControls .ui-controlgroup-controls{
   float:right;
 }
+
+/* portlets */
+
+.portletLocalUsers {
+    a, a:hover, a:focus {
+	text-decoration: none;
+    }
+    img {
+	margin: 4px;
+    }
+}
